[package]
name = "rs-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
respo = "0.1.9"
# respo = { path = "../rs.respo/respo" }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.121"
respo_state_derive = "0.0.1"
# wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
# js-sys = "0.3.69"
memoize = "0.4.2"


[dependencies.web-sys]
version = "0.3.69"
features = [
  "console",
  'Document',
  "HtmlHeadElement",
  'Element',
  'Window',
  "HtmlElement",
  "HtmlInputElement",
  "MouseEvent",
  "KeyboardEvent",
  "InputEvent",
  "Node",
  "NodeList",
  "Element",
  "HtmlCollection",
  "CssStyleDeclaration",
  "FocusEvent",
  "HtmlLabelElement",
  "BeforeUnloadEvent",
  "Storage"
]
